--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "async": "2.0.1",
     "bootstrap": "^4.1.3",
     "bower-nexus3-resolver": "^1.0.2",
+    "compression": "^1.7.3",
     "grunt": "1.0.1",
     "jquery": "^3.3.1",
     "sails": "^1.0.2",
